syntax = "proto3";

message TokenTransfer {
    string srcChain = 1;
    string destChain = 2;
    string sender = 3;
    string receiver = 4;
    bytes amount = 5;
    string token = 6;
    string oriToken = 7;
}
